# ft_turing

./: CMakeLists.txt
algorithms/: 1_unary_add.json  2_unary_sub.json  3_0^n1^n.json  4_0^2n.json  5_turing emulator.json  palindrome (копия).json  palindrome.docx  palindrome.json  task2.docx  task2.turing  task_3.json  task_4.json  unary_addition.json  unary_subtraction.json
preparation/: Architecture.drawio  Architecture.html
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  MachineDescription.cpp  ParseArguments.cpp  main.cpp
turing/: CMakeLists.txt  main.cpp
turing/JSONHandler/: Handler.cpp  Handler.h  JSONHandler.cpp  MachineDescription.cpp  MachineDescription.h  Reader.h  SMachineDescription.h
turing/JSONHandler/MachineDescriptions/: Alphabet.cpp  Finals.cpp  States.cpp  States.h  Transitions.cpp  Transitions.h
turing/MDHandler/: Handler.cpp  Handler.h  MDValidator.cpp  MDValidator.h  MachineDescription.cpp  MachineDescription.h  PrintDescription.cpp  PrintDescription.h  Reader.cpp  SMachineDescription.h  ValidateFieilds.h  ValidatorDescription.cpp  ValidatorDescription.h
turing/MDHandler/MDValidatorFields/: Blank.cpp  Blank.h  Finals.cpp  Finals.h  Initial.cpp  Initial.h  Name.cpp  Name.h  Transitions.cpp  Transitions.h
turing/MDHandler/MachineDescriptionFields/: Alphabet.cpp  Alphabet.h  Finals.cpp  Finals.h  States.cpp  States.h  Transitions.cpp  Transitions.h
turing/MachineDescription/: MachineDescription.cpp  ParseFields.cpp  ParseFields.h  PrintDescription.cpp  Reader.h  ValidateFieilds.cpp  ValidatorDescription.cpp  ValidatorDescription.h
turing/ParseArguments/: HelpArgument.cpp  HelpArgument.h  ParseArguments.cpp  ParseArguments.h  SArguments.h
turing/Procuder/: MachineTapeAPI.cpp  MachineTapeAPI.h  PrintJob.cpp  PrintJob.h  ProcudeMachineDescription.cpp  ProcudeMachineDescription.h
turing/SafePrint/: SafePrint.cpp  SafePrint.h
turing/SafeStreamWriter/: SafeStreamWriter.cpp  SafeStreamWriter.h
